reset css properties

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,180 +1,1 @@
-.navContainer {
-  width: 90%;
-  background-color: #fdfdfd;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 5rem;
-  border-radius: 0.5rem;
-  -webkit-box-shadow: 1px 1px 2px 0 #23242a, -1px -1px 2px 0 #23242a;
-          box-shadow: 1px 1px 2px 0 #23242a, -1px -1px 2px 0 #23242a;
-}
-
-.navContainer .brand {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
-  padding: 0 1rem;
-}
-
-.navContainer .brand img {
-  width: 3rem;
-  margin-right: 0.5rem;
-}
-
-.navContainer .brand span {
-  font-size: 2rem;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.navContainer ul {
-  font-size: 1.6rem;
-  left: -300rem;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.navContainer .closed {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.navContainer .closed li {
-  margin-left: 1rem;
-  font-weight: 400;
-}
-
-.navContainer .closed .firstChild {
-  margin-left: 0;
-}
-
-.navContainer .open {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: static;
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.navContainer .open li {
-  margin-left: 1rem;
-}
-
-.navContainer .logins {
-  background-color: #dc153c;
-  color: white;
-  font-size: 1.6rem;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 1rem;
-}
-
-.navContainer .toggler {
-  display: none;
-}
-
-@media screen and (max-width: 900px) {
-  .navContainer {
-    position: relative;
-    width: 90%;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .navContainer .closed {
-    position: fixed;
-    top: -30rem;
-  }
-  .navContainer .open {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    position: fixed;
-    background-color: #23242a;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 88vw;
-    z-index: 1000;
-  }
-  .navContainer .open li {
-    margin: 2rem !important;
-    color: white;
-  }
-  .navContainer .open li::after {
-    content: "";
-    display: block;
-    height: 0.2rem;
-    border-radius: 0.2rem;
-    margin-top: 0.5rem;
-    background-color: #15dc52;
-  }
-  .navContainer .open .firstChild {
-    margin-top: 4rem !important;
-  }
-  .navContainer .open::before {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(35, 36, 42, 0.3);
-    z-index: -100;
-    pointer-events: none;
-  }
-  .navContainer .toggler {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    z-index: 1500;
-    position: absolute;
-    right: 1rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    height: 100%;
-    cursor: pointer;
-  }
-  .navContainer .logins {
-    position: absolute;
-    right: 5rem;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .navContainer {
-    width: 99%;
-  }
-}
-/*# sourceMappingURL=Header.module.css.map */
+/* No CSS *//*# sourceMappingURL=Header.module.css.map */
