--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 10px;
 }
 
@@ -11,14 +10,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
 
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=globals.css.map */
