--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,1 +1,356 @@
-/* No CSS *//*# sourceMappingURL=Home.module.css.map */
+.main {
+  width: 100vw;
+  min-height: 100vh;
+  margin-top: 6rem;
+}
+
+.header {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+}
+
+.productSample {
+  width: 100vw;
+  min-height: 30vh;
+}
+
+.productSample .container {
+  width: 85%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 4rem 0;
+}
+
+.productSample .productCategorySample {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.productSample .productCategorySample .sample {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.productSample .productCategorySample .sample img {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.productSample .productCategorySample .sample .link {
+  position: absolute;
+  bottom: 5rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.productSample .productCategorySample .sample .link a {
+  background-color: #fefefe;
+  font-size: 1.8rem;
+  margin: 0 auto;
+  width: 15rem;
+  padding: 1rem 0;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.productSample .productCategorySample .sample .link a:hover {
+  background-color: #9b6d24;
+  color: white;
+}
+
+.productSample .productCategorySample .sample:hover img {
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
+}
+
+.productSample .productCategorySample .sample:first-child {
+  margin-bottom: 3rem;
+}
+
+.productSample .productCategorySample .sample .signUp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.productSample .productCategorySample .sample .signUp h3 {
+  font-size: 3rem;
+  color: #111111;
+}
+
+.productSample .productCategorySample .sample .signUp p {
+  font-size: 1.5rem;
+  color: #888888;
+  margin: 3rem 0;
+}
+
+.productSample .productCategorySample .sample .signUp .signUpBtn {
+  position: static;
+  border-radius: 2.4rem;
+  width: 15rem;
+  background-color: #111111;
+  color: white;
+  font-size: 1.8rem;
+  padding: 1rem 0;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 2.4rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.productSample .productCategorySample .sample .signUp .signUpBtn:hover {
+  background-color: #9b6d24;
+  color: white;
+}
+
+.productSample .productCategorySample:nth-child(2) {
+  margin: 0 3rem;
+}
+
+.featuredProducts {
+  width: 100vw;
+  min-height: 40vh;
+  padding: 4rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.featuredProducts h3 {
+  font-size: 3.6rem;
+  margin-bottom: 4rem;
+}
+
+.footer {
+  width: 100vw;
+  min-height: 40vh;
+  padding: 4rem 0;
+  background-color: #f0f0f0;
+}
+
+.footer .container {
+  width: 90%;
+  margin: 0 auto;
+  min-height: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2rem 0;
+}
+
+.footer .container .grid {
+  width: 100%;
+  margin-bottom: 2rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr 1fr 2fr;
+      grid-template-columns: 2fr 1fr 1fr 2fr;
+  grid-auto-rows: auto;
+  gap: 2rem;
+}
+
+.footer .container .grid .getInTouch ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.6rem;
+  margin-top: 2rem;
+}
+
+.footer .container .grid .getInTouch ul li {
+  margin-left: 1.5rem;
+}
+
+.footer .container .grid .getInTouch ul li:first-child {
+  margin-left: 0;
+}
+
+.footer .container .grid .getInTouch ul li:hover {
+  color: #9b6d24;
+}
+
+.footer .container .grid .categories ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1.6rem;
+  color: #555555;
+}
+
+.footer .container .grid .categories ul li {
+  margin-top: 1.5rem;
+}
+
+.footer .container .grid .categories ul li:first-child {
+  margin-top: 0;
+}
+
+.footer .container .grid .categories ul li:hover {
+  color: #9b6d24;
+}
+
+.footer .container .grid .links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1.6rem;
+  color: #555555;
+}
+
+.footer .container .grid .links ul li {
+  margin-top: 1.5rem;
+}
+
+.footer .container .grid .links ul li:first-child {
+  margin-top: 0;
+}
+
+.footer .container .grid .links ul li:hover {
+  color: #9b6d24;
+}
+
+.footer .container .grid .mail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer .container .grid .mail input {
+  border: none;
+  border-bottom: 1px solid #cccccc;
+  outline: none;
+  height: 3rem;
+  background: none;
+  margin-bottom: 2.5rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.footer .container .grid .mail input:focus {
+  border-bottom: 1px solid #9b6d24;
+}
+
+.footer .container .grid .mail button {
+  width: 15rem;
+  height: 4rem;
+  border-radius: 2.4rem;
+  border: none;
+  background-color: #111111;
+  color: white;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  outline: none;
+}
+
+.footer .container .grid .mail button:hover {
+  background-color: #9b6d24;
+}
+
+.footer .container h3 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  color: #222222;
+}
+
+.footer .container p {
+  font-size: 1.6rem;
+  color: #555555;
+}
+
+.footer .container .copyright {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.6rem;
+}
+
+@media screen and (max-width: 800px) {
+  .footer .container .grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    row-gap: 4rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .productSample .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .productSample .productCategorySample:nth-child(2) {
+    margin: 3rem 0;
+  }
+  .productSample .productCategorySample:last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+/*# sourceMappingURL=Home.module.css.map */
