--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 10px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -14,5 +21,28 @@ a {
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.container-full {
+  width: 90%;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
+.container-half {
+  width: 80%;
+  min-height: 50vh;
+  margin: 0 auto;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  padding: 0;
+  margin: 0;
 }
 /*# sourceMappingURL=globals.css.map */
