--- a/styles/ProductSlide.module.scss
+++ b/styles/ProductSlide.module.scss
@@ -18,6 +18,8 @@ $primary: #9b6d24;
       margin-left: 1rem;
       img {
         width: 100%;
+        height: 60rem;
+        max-height: 50vh;
       }
       .order {
         width: 100%;
