--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -12,16 +12,15 @@ $primary: #9b6d24;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
-    flex-wrap: wrap;
+    align-items: center;
     height: 100%;
-    // background-color: red;
     padding: 3rem 0;
     position: relative;
     .brand {
       display: flex;
       width: fit-content;
       align-items: center;
-      height: inherit;
+      height: 100%;
       cursor: pointer;
       img {
         width: 40px;
@@ -57,15 +56,29 @@ $primary: #9b6d24;
       ul {
         display: flex;
         flex-direction: column;
-        height: 100%;
-        width: 20rem;
+        height: 100vh;
+        // width: 20rem;
+        width: 60vw;
         justify-content: flex-start;
         align-items: flex-start;
         padding: 1rem;
-        border-radius: 1rem;
+        // border-radius: 1rem;
         box-shadow: 1px 1px 4px 0 rgba($color: #000000, $alpha: 0.3);
         background-color: white;
         z-index: 100000;
+        &::after {
+          content: "";
+          width: 100vw;
+          height: 100vh;
+          position: absolute;
+          display: block;
+          top: 0;
+          left: 0;
+          background-color: rgba($color: #000000, $alpha: 0.4);
+          transform: translateX(-50%);
+          z-index: -1;
+          pointer-events: none;
+        }
       }
       .nav_item {
         font-size: 1.8rem;
@@ -90,7 +103,6 @@ $primary: #9b6d24;
       transform: scale(1);
     }
     .nav_right {
-      // background-color: black;
       height: 100%;
       display: flex;
       align-items: center;
@@ -106,7 +118,7 @@ $primary: #9b6d24;
 } // nav
 
 //media web
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 920px) {
   .nav_bar {
     .nav_bar_container {
       height: 100%;
@@ -114,20 +126,24 @@ $primary: #9b6d24;
       .toggle_open {
         position: static !important;
         transform: scale(1);
-        height: 100%;
         ul {
           display: flex;
           flex-direction: row;
           height: 100%;
-          // width: 100%;
           justify-content: center;
           align-items: center;
-          // background-color: blue;
           width: initial;
           padding: 1rem;
           border-radius: none;
           box-shadow: none;
-          // background-color: white;
+          &::after {
+            //backdrop none
+            content: "";
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            display: none;
+          }
         }
       }
       .nav_right {
@@ -149,3 +165,15 @@ $primary: #9b6d24;
     }
   }
 }
+// @media screen and (max-width: 420px) {
+// .nav_right {
+// .i {
+//   &:nth-child(1) {
+//     display: none;
+//   }
+//   &:nth-child(2) {
+//     display: none;
+//   }
+// }
+// }
+// }
