--- a/styles/ProductSlide.module.css
+++ b/styles/ProductSlide.module.css
@@ -37,6 +37,8 @@
 
 .featured .productSlide .productImage img {
   width: 100%;
+  height: 60rem;
+  max-height: 50vh;
 }
 
 .featured .productSlide .productImage .order {
