--- a/styles/Slide.module.scss
+++ b/styles/Slide.module.scss
@@ -1,8 +1,4 @@
-$primaryColorRed: rgb(255, 0, 43);
-$primaryColorBlue: rgb(61, 178, 213);
-$primaryColorGreen: rgb(59, 182, 76);
-$primaryBtn: rgb(255, 182, 7);
-$secondaryBackground: rgb(245, 245, 245);
+$primary: #9b6d24;
 
 .slide_1,
 .slide_2 {
@@ -35,14 +31,13 @@ $secondaryBackground: rgb(245, 245, 245);
     padding: 1rem;
     // line-height: 0.5rem;
     h3 {
-      font-size: 7rem;
+      font-size: 4rem;
       font-weight: 900;
       color: #f7f7f7;
       text-transform: uppercase;
       text-align: center;
       letter-spacing: 0.3rem;
       transform: translateX(-0.1rem);
-      // background-color: red;
       margin: 1rem 0 1.5rem 0rem;
     }
     span {
@@ -57,6 +52,10 @@ $secondaryBackground: rgb(245, 245, 245);
       border: none;
       cursor: pointer;
       text-transform: uppercase;
+      &:hover {
+        background-color: $primary;
+        color: white;
+      }
     }
   }
 }
@@ -98,5 +97,9 @@ $secondaryBackground: rgb(245, 245, 245);
     transform: scale(1);
   }
 }
-@media screen and (max-width: 900px) {
+@media screen and (min-height: 1100px) {
+  .slide_1,
+  .slide_2 {
+    min-height: 50vh;
+  }
 }
