--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -380,6 +380,155 @@
   }
 }
 
+.promotion {
+  width: 100vw;
+  background-color: #f0f0f0;
+  min-height: 20vh;
+  padding: 4rem 0;
+}
+
+.promotion .container {
+  width: 90%;
+  height: inherit;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
+
+.promotion .container .left {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.promotion .container .left .description {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  color: white;
+}
+
+.promotion .container .left .description h4 {
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+  font-weight: 200;
+}
+
+.promotion .container .left .description h1 {
+  font-size: 3.6rem;
+  font-weight: 900;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.promotion .container .left .description a {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  border: 0.2rem solid #9b6d24;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.promotion .container .left .description a:hover {
+  background-color: #9b6d24;
+}
+
+.promotion .container .right {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.promotion .container .right .description {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  color: white;
+}
+
+.promotion .container .right .description h4 {
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
+  font-weight: 200;
+}
+
+.promotion .container .right .description h1 {
+  font-size: 3.6rem;
+  font-weight: 900;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.promotion .container .right .description a {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  border: 0.2rem solid #9b6d24;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.promotion .container .right .description a:hover {
+  background-color: #9b6d24;
+}
+
 @media screen and (max-width: 800px) {
   .footer .container .grid {
     -ms-grid-columns: 1fr;
@@ -406,6 +555,34 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .promotion .container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+@-webkit-keyframes looks {
+  0% {
+    background-image: url("/looks_1.png");
+  }
+  50% {
+    background-image: url("/looks_2.png");
+  }
+  100% {
+    background-image: url("/looks_1.png");
+  }
+}
+
+@keyframes looks {
+  0% {
+    background-image: url("/looks_1.png");
+  }
+  50% {
+    background-image: url("/looks_2.png");
+  }
+  100% {
+    background-image: url("/looks_1.png");
   }
 }
 /*# sourceMappingURL=Home.module.css.map */
