--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -277,6 +277,112 @@ $primary: #9b6d24;
     top: 0;
   }
 }
+.promotion {
+  width: 100vw;
+  background-color: #f0f0f0;
+  min-height: 20vh;
+  padding: 4rem 0;
+  .container {
+    width: 90%;
+    height: inherit;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    .left {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba($color: #000000, $alpha: 0.4);
+      // margin-right: 2rem;
+      .description {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+        color: white;
+        h4 {
+          font-size: 1.6rem;
+          margin-bottom: 2rem;
+          font-weight: 200;
+        }
+        h1 {
+          font-size: 3.6rem;
+          font-weight: 900;
+          letter-spacing: 0.1rem;
+          text-transform: uppercase;
+        }
+        a {
+          margin-top: 2rem;
+          font-size: 1.4rem;
+          text-transform: uppercase;
+          border: 0.2rem solid $primary;
+          border-radius: 0.5rem;
+          padding: 0.5rem 1rem;
+          transition: 0.5s;
+          &:hover {
+            background-color: $primary;
+          }
+        }
+      }
+      img {
+        // width: 100%;
+        // filter: brightness(0.3);
+      }
+    }
+    .right {
+      background-color: rgba($color: #000000, $alpha: 0.4);
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      .description {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+        color: white;
+        h4 {
+          font-size: 1.6rem;
+          margin-bottom: 2rem;
+          font-weight: 200;
+        }
+        h1 {
+          font-size: 3.6rem;
+          font-weight: 900;
+          letter-spacing: 0.1rem;
+          text-transform: uppercase;
+        }
+        a {
+          margin-top: 2rem;
+          font-size: 1.4rem;
+          text-transform: uppercase;
+          border: 0.2rem solid $primary;
+          border-radius: 0.5rem;
+          padding: 0.5rem 1rem;
+          transition: 0.5s;
+          &:hover {
+            background-color: $primary;
+          }
+        }
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 800px) {
   .footer {
@@ -306,5 +412,25 @@ $primary: #9b6d24;
         // flex-direction: row;
       }
     }
+  }
+  .promotion {
+    .container {
+      grid-template-columns: 1fr;
+      .right {
+        // display: flex;
+      }
+    }
+  }
+}
+
+@keyframes looks {
+  0% {
+    background-image: url("/looks_1.png");
+  }
+  50% {
+    background-image: url("/looks_2.png");
+  }
+  100% {
+    background-image: url("/looks_1.png");
   }
 }
