--- a/styles/ProductSlide.module.scss
+++ b/styles/ProductSlide.module.scss
@@ -18,8 +18,9 @@ $primary: #9b6d24;
       margin-left: 1rem;
       img {
         width: 100%;
-        height: 60rem;
-        max-height: 50vh;
+        // height: 60rem;
+        // max-height: 50vh;
+        // object-fit: cover;
       }
       .order {
         width: 100%;
@@ -65,7 +66,7 @@ $primary: #9b6d24;
       }
     }
     &:hover {
-      filter: brightness(0.9);
+      filter: brightness(0.6);
       .order {
         z-index: 100;
       }
