--- a/styles/Slide.module.scss
+++ b/styles/Slide.module.scss
@@ -1,12 +1,121 @@
 $primary: #9b6d24;
 
-.slide_1,
-.slide_2 {
+.slide_1 {
   width: 100vw;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-image: url("/184575.jpg");
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  // animation
+  animation-duration: 20s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+  overflow: hidden;
+  position: relative;
+  // z-index: -10;
+  > div {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 90vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 1rem;
+    // line-height: 0.5rem;
+    span {
+      font-size: 1.8rem;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    .welcomeLogo {
+      width: 7rem;
+      height: 7rem;
+    }
+    h3 {
+      font-size: 4rem;
+      font-weight: 900;
+      color: $primary;
+      text-transform: uppercase;
+      text-align: center;
+      letter-spacing: 0.3rem;
+      transform: translateX(-0.1rem);
+      margin: 0.5rem 0 2rem 0rem;
+    }
+
+    a {
+      position: relative;
+      width: 15rem;
+      height: 4rem;
+      .texture {
+        // position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 2.4rem;
+        left: -20px;
+        // transform: translateX(-50%);
+      }
+      button {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        padding: 1rem 3rem;
+        border-radius: 2.4rem;
+        border: none;
+        cursor: pointer;
+        text-transform: uppercase;
+        transform: translateX(-100%);
+        color: white;
+        font-weight: 700;
+        &:hover {
+          background-color: $primary;
+          color: white;
+        }
+      }
+    }
+  }
+  .guy_preview {
+    position: absolute;
+    right: 0;
+    width: 30%;
+    height: 80%;
+    max-height: 40rem;
+    transition: 0.5s ease-in-out;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  .woman_preview {
+    position: absolute;
+    left: 0;
+    width: 30%;
+    height: 80%;
+    max-height: 40rem;
+    transition: 0.5s ease-in-out;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+.slide_2 {
+  animation-name: slide_2;
+  width: 100vw;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url("/184575.jpg");
   align-items: center;
   background-position: center;
   background-size: cover;
@@ -30,6 +139,10 @@ $primary: #9b6d24;
     color: white;
     padding: 1rem;
     // line-height: 0.5rem;
+    .welcomeLogo,
+    .texture {
+      display: none;
+    }
     h3 {
       font-size: 4rem;
       font-weight: 900;
@@ -58,26 +171,12 @@ $primary: #9b6d24;
       }
     }
   }
+  .guy_preview,
+  .woman_preview {
+    display: none;
+  }
 }
 
-.slide_1 {
-  animation-name: slide_1;
-}
-.slide_2 {
-  animation-name: slide_2;
-}
-
-@keyframes slide_1 {
-  0% {
-    background-image: url("/slide02.webp");
-  }
-  50% {
-    background-image: url("/slide03.webp");
-  }
-  100% {
-    background-image: url("/slide01.webp");
-  }
-}
 @keyframes slide_2 {
   0% {
     background-image: url("/slide02.webp");
@@ -101,5 +200,13 @@ $primary: #9b6d24;
   .slide_1,
   .slide_2 {
     min-height: 50vh;
+  }
+}
+@media screen and (max-width: 500px) {
+  .slide_1 {
+    .guy_preview,
+    .woman_preview {
+      display: none;
+    }
   }
 }
