--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,4 +46,15 @@ li {
   padding: 0;
   margin: 0;
 }
+
+#active::after {
+  content: "";
+  display: block;
+  height: 0.3rem;
+  background-color: #9b6d24;
+}
+
+.carousel-container {
+  z-index: 1;
+}
 /*# sourceMappingURL=globals.css.map */
