--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+$primary: #9b6d24;
+
 html,
 body {
   padding: 0;
@@ -40,4 +42,18 @@ ul {
 li {
   padding: 0;
   margin: 0;
+}
+
+#active {
+  // background-color: blue !important;
+  // color: red !important;
+  &::after {
+    content: "";
+    display: block;
+    height: 0.3rem;
+    background-color: $primary;
+  }
+}
+.carousel-container {
+  z-index: 1;
 }
